Language/MyLanguageGrammarParser.cs
//------------------------------------------------------------------------------
// <auto-generated>
//     This code was generated by a tool.
//     ANTLR Version: 4.13.1
//
//     Changes to this file may cause incorrect behavior and will be lost if
//     the code is regenerated.
// </auto-generated>
//------------------------------------------------------------------------------

// Generated from MyLanguageGrammar.g4 by ANTLR 4.13.1

// Unreachable code detected
#pragma warning disable 0162
// The variable '...' is assigned but its value is never used
#pragma warning disable 0219
// Missing XML comment for publicly visible type or member '...'
#pragma warning disable 1591
// Ambiguous reference in cref attribute
#pragma warning disable 419

using System;
using System.IO;
using System.Text;
using System.Diagnostics;
using System.Collections.Generic;
using Antlr4.Runtime;
using Antlr4.Runtime.Atn;
using Antlr4.Runtime.Misc;
using Antlr4.Runtime.Tree;
using DFA = Antlr4.Runtime.Dfa.DFA;

[System.CodeDom.Compiler.GeneratedCode("ANTLR", "4.13.1")]
[System.CLSCompliant(false)]
public partial class MyLanguageGrammarParser : Parser {
	protected static DFA[] decisionToDFA;
	protected static PredictionContextCache sharedContextCache = new PredictionContextCache();
	public const int
		T__0=1, T__1=2, T__2=3, T__3=4, T__4=5, T__5=6, T__6=7, T__7=8, T__8=9, 
		T__9=10, T__10=11, T__11=12, MODULE=13, IMPORT=14, VARIABLES=15, INT=16, 
		INT_L=17, REAL=18, REAL_L=19, STR=20, STR_L=21, ARRAY=22, OF=23, PROCEDURE=24, 
		IF=25, THEN=26, ELSIF=27, ELSE=28, WHILE=29, DO=30, START=31, END=32, 
		RETURN=33, SEMI=34, COMMA=35, LPAREN=36, RPAREN=37, EQ=38, COLON=39, PERIOD=40, 
		IDENT_L=41, WS=42;
	public const int
		RULE_start = 0, RULE_module = 1, RULE_qualifiedIdent = 2, RULE_moduleStatements = 3, 
		RULE_variablesDeclarationBlock = 4, RULE_variablesDeclaration = 5, RULE_type = 6, 
		RULE_procedure = 7, RULE_procedureDeclaration = 8, RULE_procedureParameters = 9, 
		RULE_procedureBody = 10, RULE_statement = 11, RULE_procedureCall = 12, 
		RULE_expression = 13, RULE_simpleExpression = 14, RULE_addOperator = 15, 
		RULE_relation = 16, RULE_term = 17, RULE_mulOperator = 18, RULE_factor = 19, 
		RULE_literal = 20, RULE_assignment = 21, RULE_ifStatement = 22, RULE_elseIfStatement = 23, 
		RULE_elseStatement = 24, RULE_whileStatement = 25, RULE_returnStatement = 26;
	public static readonly string[] ruleNames = {
		"start", "module", "qualifiedIdent", "moduleStatements", "variablesDeclarationBlock", 
		"variablesDeclaration", "type", "procedure", "procedureDeclaration", "procedureParameters", 
		"procedureBody", "statement", "procedureCall", "expression", "simpleExpression", 
		"addOperator", "relation", "term", "mulOperator", "factor", "literal", 
		"assignment", "ifStatement", "elseIfStatement", "elseStatement", "whileStatement", 
		"returnStatement"
	};

	private static readonly string[] _LiteralNames = {
		null, "'+'", "'-'", "'='", "'#'", "'<'", "'<='", "'>'", "'>='", "'*'", 
		"'/'", "'&'", "'~'", "'MODULE'", "'IMPORT'", "'VARIABLES'", "'INT'", null, 
		"'REAL'", null, "'STR'", null, "'ARRAY'", "'OF'", "'PROCEDURE'", "'IF'", 
		"'THEN'", "'ELSIF'", "'ELSE'", "'WHILE'", "'DO'", "'START'", "'END'", 
		"'RETURN'", "';'", "','", "'('", "')'", "':='", "':'", "'.'"
	};
	private static readonly string[] _SymbolicNames = {
		null, null, null, null, null, null, null, null, null, null, null, null, 
		null, "MODULE", "IMPORT", "VARIABLES", "INT", "INT_L", "REAL", "REAL_L", 
		"STR", "STR_L", "ARRAY", "OF", "PROCEDURE", "IF", "THEN", "ELSIF", "ELSE", 
		"WHILE", "DO", "START", "END", "RETURN", "SEMI", "COMMA", "LPAREN", "RPAREN", 
		"EQ", "COLON", "PERIOD", "IDENT_L", "WS"
	};
	public static readonly IVocabulary DefaultVocabulary = new Vocabulary(_LiteralNames, _SymbolicNames);

	[NotNull]
	public override IVocabulary Vocabulary
	{
		get
		{
			return DefaultVocabulary;
		}
	}

	public override string GrammarFileName { get { return "MyLanguageGrammar.g4"; } }

	public override string[] RuleNames { get { return ruleNames; } }

	public override int[] SerializedAtn { get { return _serializedATN; } }

	static MyLanguageGrammarParser() {
		decisionToDFA = new DFA[_ATN.NumberOfDecisions];
		for (int i = 0; i < _ATN.NumberOfDecisions; i++) {
			decisionToDFA[i] = new DFA(_ATN.GetDecisionState(i), i);
		}
	}

		public MyLanguageGrammarParser(ITokenStream input) : this(input, Console.Out, Console.Error) { }

		public MyLanguageGrammarParser(ITokenStream input, TextWriter output, TextWriter errorOutput)
		: base(input, output, errorOutput)
	{
		Interpreter = new ParserATNSimulator(this, _ATN, decisionToDFA, sharedContextCache);
	}

	public partial class StartContext : ParserRuleContext {
		[System.Diagnostics.DebuggerNonUserCode] public ModuleContext module() {
			return GetRuleContext<ModuleContext>(0);
		}
		[System.Diagnostics.DebuggerNonUserCode] public ITerminalNode Eof() { return GetToken(MyLanguageGrammarParser.Eof, 0); }
		public StartContext(ParserRuleContext parent, int invokingState)
			: base(parent, invokingState)
		{
		}
		public override int RuleIndex { get { return RULE_start; } }
		[System.Diagnostics.DebuggerNonUserCode]
		public override TResult Accept<TResult>(IParseTreeVisitor<TResult> visitor) {
			IMyLanguageGrammarVisitor<TResult> typedVisitor = visitor as IMyLanguageGrammarVisitor<TResult>;
			if (typedVisitor != null) return typedVisitor.VisitStart(this);
			else return visitor.VisitChildren(this);
		}
	}

	[RuleVersion(0)]
	public StartContext start() {
		StartContext _localctx = new StartContext(Context, State);
		EnterRule(_localctx, 0, RULE_start);
		try {
			EnterOuterAlt(_localctx, 1);
			{
			State = 54;
			module();
			State = 55;
			Match(Eof);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			ErrorHandler.ReportError(this, re);
			ErrorHandler.Recover(this, re);
		}
		finally {
			ExitRule();
		}
		return _localctx;
	}

	public partial class ModuleContext : ParserRuleContext {
		[System.Diagnostics.DebuggerNonUserCode] public ITerminalNode MODULE() { return GetToken(MyLanguageGrammarParser.MODULE, 0); }
		[System.Diagnostics.DebuggerNonUserCode] public QualifiedIdentContext qualifiedIdent() {
			return GetRuleContext<QualifiedIdentContext>(0);
		}
		[System.Diagnostics.DebuggerNonUserCode] public ITerminalNode SEMI() { return GetToken(MyLanguageGrammarParser.SEMI, 0); }
		[System.Diagnostics.DebuggerNonUserCode] public ITerminalNode PERIOD() { return GetToken(MyLanguageGrammarParser.PERIOD, 0); }
		[System.Diagnostics.DebuggerNonUserCode] public ModuleStatementsContext moduleStatements() {
			return GetRuleContext<ModuleStatementsContext>(0);
		}
		public ModuleContext(ParserRuleContext parent, int invokingState)
			: base(parent, invokingState)
		{
		}
		public override int RuleIndex { get { return RULE_module; } }
		[System.Diagnostics.DebuggerNonUserCode]
		public override TResult Accept<TResult>(IParseTreeVisitor<TResult> visitor) {
			IMyLanguageGrammarVisitor<TResult> typedVisitor = visitor as IMyLanguageGrammarVisitor<TResult>;
			if (typedVisitor != null) return typedVisitor.VisitModule(this);
			else return visitor.VisitChildren(this);
		}
	}

	[RuleVersion(0)]
	public ModuleContext module() {
		ModuleContext _localctx = new ModuleContext(Context, State);
		EnterRule(_localctx, 2, RULE_module);
		int _la;
		try {
			EnterOuterAlt(_localctx, 1);
			{
			State = 57;
			Match(MODULE);
			State = 58;
			qualifiedIdent();
			State = 59;
			Match(SEMI);
			State = 61;
			ErrorHandler.Sync(this);
			_la = TokenStream.LA(1);
			if ((((_la) & ~0x3f) == 0 && ((1L << _la) & 2164310016L) != 0)) {
				{
				State = 60;
				moduleStatements();
				}
			}

			State = 63;
			Match(PERIOD);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			ErrorHandler.ReportError(this, re);
			ErrorHandler.Recover(this, re);
		}
		finally {
			ExitRule();
		}
		return _localctx;
	}

	public partial class QualifiedIdentContext : ParserRuleContext {
		[System.Diagnostics.DebuggerNonUserCode] public ITerminalNode[] IDENT_L() { return GetTokens(MyLanguageGrammarParser.IDENT_L); }
		[System.Diagnostics.DebuggerNonUserCode] public ITerminalNode IDENT_L(int i) {
			return GetToken(MyLanguageGrammarParser.IDENT_L, i);
		}
		[System.Diagnostics.DebuggerNonUserCode] public ITerminalNode[] PERIOD() { return GetTokens(MyLanguageGrammarParser.PERIOD); }
		[System.Diagnostics.DebuggerNonUserCode] public ITerminalNode PERIOD(int i) {
			return GetToken(MyLanguageGrammarParser.PERIOD, i);
		}
		public QualifiedIdentContext(ParserRuleContext parent, int invokingState)
			: base(parent, invokingState)
		{
		}
		public override int RuleIndex { get { return RULE_qualifiedIdent; } }
		[System.Diagnostics.DebuggerNonUserCode]
		public override TResult Accept<TResult>(IParseTreeVisitor<TResult> visitor) {
			IMyLanguageGrammarVisitor<TResult> typedVisitor = visitor as IMyLanguageGrammarVisitor<TResult>;
			if (typedVisitor != null) return typedVisitor.VisitQualifiedIdent(this);
			else return visitor.VisitChildren(this);
		}
	}

	[RuleVersion(0)]
	public QualifiedIdentContext qualifiedIdent() {
		QualifiedIdentContext _localctx = new QualifiedIdentContext(Context, State);
		EnterRule(_localctx, 4, RULE_qualifiedIdent);
		int _la;
		try {
			EnterOuterAlt(_localctx, 1);
			{
			State = 65;
			Match(IDENT_L);
			State = 70;
			ErrorHandler.Sync(this);
			_la = TokenStream.LA(1);
			while (_la==PERIOD) {
				{
				{
				State = 66;
				Match(PERIOD);
				State = 67;
				Match(IDENT_L);
				}
				}
				State = 72;
				ErrorHandler.Sync(this);
				_la = TokenStream.LA(1);
			}
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			ErrorHandler.ReportError(this, re);
			ErrorHandler.Recover(this, re);
		}
		finally {
			ExitRule();
		}
		return _localctx;
	}

	public partial class ModuleStatementsContext : ParserRuleContext {
		[System.Diagnostics.DebuggerNonUserCode] public ProcedureBodyContext procedureBody() {
			return GetRuleContext<ProcedureBodyContext>(0);
		}
		[System.Diagnostics.DebuggerNonUserCode] public ITerminalNode IDENT_L() { return GetToken(MyLanguageGrammarParser.IDENT_L, 0); }
		[System.Diagnostics.DebuggerNonUserCode] public ITerminalNode[] IMPORT() { return GetTokens(MyLanguageGrammarParser.IMPORT); }
		[System.Diagnostics.DebuggerNonUserCode] public ITerminalNode IMPORT(int i) {
			return GetToken(MyLanguageGrammarParser.IMPORT, i);
		}
		[System.Diagnostics.DebuggerNonUserCode] public QualifiedIdentContext[] qualifiedIdent() {
			return GetRuleContexts<QualifiedIdentContext>();
		}
		[System.Diagnostics.DebuggerNonUserCode] public QualifiedIdentContext qualifiedIdent(int i) {
			return GetRuleContext<QualifiedIdentContext>(i);
		}
		[System.Diagnostics.DebuggerNonUserCode] public ITerminalNode[] SEMI() { return GetTokens(MyLanguageGrammarParser.SEMI); }
		[System.Diagnostics.DebuggerNonUserCode] public ITerminalNode SEMI(int i) {
			return GetToken(MyLanguageGrammarParser.SEMI, i);
		}
		[System.Diagnostics.DebuggerNonUserCode] public VariablesDeclarationBlockContext variablesDeclarationBlock() {
			return GetRuleContext<VariablesDeclarationBlockContext>(0);
		}
		[System.Diagnostics.DebuggerNonUserCode] public ProcedureContext[] procedure() {
			return GetRuleContexts<ProcedureContext>();
		}
		[System.Diagnostics.DebuggerNonUserCode] public ProcedureContext procedure(int i) {
			return GetRuleContext<ProcedureContext>(i);
		}
		public ModuleStatementsContext(ParserRuleContext parent, int invokingState)
			: base(parent, invokingState)
		{
		}
		public override int RuleIndex { get { return RULE_moduleStatements; } }
		[System.Diagnostics.DebuggerNonUserCode]
		public override TResult Accept<TResult>(IParseTreeVisitor<TResult> visitor) {
			IMyLanguageGrammarVisitor<TResult> typedVisitor = visitor as IMyLanguageGrammarVisitor<TResult>;
			if (typedVisitor != null) return typedVisitor.VisitModuleStatements(this);
			else return visitor.VisitChildren(this);
		}
	}

	[RuleVersion(0)]
	public ModuleStatementsContext moduleStatements() {
		ModuleStatementsContext _localctx = new ModuleStatementsContext(Context, State);
		EnterRule(_localctx, 6, RULE_moduleStatements);
		int _la;
		try {
			EnterOuterAlt(_localctx, 1);
			{
			State = 79;
			ErrorHandler.Sync(this);
			_la = TokenStream.LA(1);
			while (_la==IMPORT) {
				{
				{
				State = 73;
				Match(IMPORT);
				State = 74;
				qualifiedIdent();
				State = 75;
				Match(SEMI);
				}
				}
				State = 81;
				ErrorHandler.Sync(this);
				_la = TokenStream.LA(1);
			}
			State = 83;
			ErrorHandler.Sync(this);
			_la = TokenStream.LA(1);
			if (_la==VARIABLES) {
				{
				State = 82;
				variablesDeclarationBlock();
				}
			}

			State = 88;
			ErrorHandler.Sync(this);
			_la = TokenStream.LA(1);
			while (_la==PROCEDURE) {
				{
				{
				State = 85;
				procedure();
				}
				}
				State = 90;
				ErrorHandler.Sync(this);
				_la = TokenStream.LA(1);
			}
			State = 91;
			procedureBody();
			State = 92;
			Match(IDENT_L);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			ErrorHandler.ReportError(this, re);
			ErrorHandler.Recover(this, re);
		}
		finally {
			ExitRule();
		}
		return _localctx;
	}

	public partial class VariablesDeclarationBlockContext : ParserRuleContext {
		[System.Diagnostics.DebuggerNonUserCode] public ITerminalNode VARIABLES() { return GetToken(MyLanguageGrammarParser.VARIABLES, 0); }
		[System.Diagnostics.DebuggerNonUserCode] public VariablesDeclarationContext[] variablesDeclaration() {
			return GetRuleContexts<VariablesDeclarationContext>();
		}
		[System.Diagnostics.DebuggerNonUserCode] public VariablesDeclarationContext variablesDeclaration(int i) {
			return GetRuleContext<VariablesDeclarationContext>(i);
		}
		[System.Diagnostics.DebuggerNonUserCode] public ITerminalNode[] SEMI() { return GetTokens(MyLanguageGrammarParser.SEMI); }
		[System.Diagnostics.DebuggerNonUserCode] public ITerminalNode SEMI(int i) {
			return GetToken(MyLanguageGrammarParser.SEMI, i);
		}
		public VariablesDeclarationBlockContext(ParserRuleContext parent, int invokingState)
			: base(parent, invokingState)
		{
		}
		public override int RuleIndex { get { return RULE_variablesDeclarationBlock; } }
		[System.Diagnostics.DebuggerNonUserCode]
		public override TResult Accept<TResult>(IParseTreeVisitor<TResult> visitor) {
			IMyLanguageGrammarVisitor<TResult> typedVisitor = visitor as IMyLanguageGrammarVisitor<TResult>;
			if (typedVisitor != null) return typedVisitor.VisitVariablesDeclarationBlock(this);
			else return visitor.VisitChildren(this);
		}
	}

	[RuleVersion(0)]
	public VariablesDeclarationBlockContext variablesDeclarationBlock() {
		VariablesDeclarationBlockContext _localctx = new VariablesDeclarationBlockContext(Context, State);
		EnterRule(_localctx, 8, RULE_variablesDeclarationBlock);
		int _la;
		try {
			EnterOuterAlt(_localctx, 1);
			{
			State = 94;
			Match(VARIABLES);
			State = 98;
			ErrorHandler.Sync(this);
			_la = TokenStream.LA(1);
			do {
				{
				{
				State = 95;
				variablesDeclaration();
				State = 96;
				Match(SEMI);
				}
				}
				State = 100;
				ErrorHandler.Sync(this);
				_la = TokenStream.LA(1);
			} while ( _la==IDENT_L );
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			ErrorHandler.ReportError(this, re);
			ErrorHandler.Recover(this, re);
		}
		finally {
			ExitRule();
		}
		return _localctx;
	}

	public partial class VariablesDeclarationContext : ParserRuleContext {
		[System.Diagnostics.DebuggerNonUserCode] public ITerminalNode[] IDENT_L() { return GetTokens(MyLanguageGrammarParser.IDENT_L); }
		[System.Diagnostics.DebuggerNonUserCode] public ITerminalNode IDENT_L(int i) {
			return GetToken(MyLanguageGrammarParser.IDENT_L, i);
		}
		[System.Diagnostics.DebuggerNonUserCode] public ITerminalNode COLON() { return GetToken(MyLanguageGrammarParser.COLON, 0); }
		[System.Diagnostics.DebuggerNonUserCode] public TypeContext type() {
			return GetRuleContext<TypeContext>(0);
		}
		[System.Diagnostics.DebuggerNonUserCode] public ITerminalNode[] COMMA() { return GetTokens(MyLanguageGrammarParser.COMMA); }
		[System.Diagnostics.DebuggerNonUserCode] public ITerminalNode COMMA(int i) {
			return GetToken(MyLanguageGrammarParser.COMMA, i);
		}
		public VariablesDeclarationContext(ParserRuleContext parent, int invokingState)
			: base(parent, invokingState)
		{
		}
		public override int RuleIndex { get { return RULE_variablesDeclaration; } }
		[System.Diagnostics.DebuggerNonUserCode]
		public override TResult Accept<TResult>(IParseTreeVisitor<TResult> visitor) {
			IMyLanguageGrammarVisitor<TResult> typedVisitor = visitor as IMyLanguageGrammarVisitor<TResult>;
			if (typedVisitor != null) return typedVisitor.VisitVariablesDeclaration(this);
			else return visitor.VisitChildren(this);
		}
	}

	[RuleVersion(0)]
	public VariablesDeclarationContext variablesDeclaration() {
		VariablesDeclarationContext _localctx = new VariablesDeclarationContext(Context, State);
		EnterRule(_localctx, 10, RULE_variablesDeclaration);
		int _la;
		try {
			EnterOuterAlt(_localctx, 1);
			{
			State = 102;
			Match(IDENT_L);
			State = 107;
			ErrorHandler.Sync(this);
			_la = TokenStream.LA(1);
			while (_la==COMMA) {
				{
				{
				State = 103;
				Match(COMMA);
				State = 104;
				Match(IDENT_L);
				}
				}
				State = 109;
				ErrorHandler.Sync(this);
				_la = TokenStream.LA(1);
			}
			State = 110;
			Match(COLON);
			State = 111;
			type();
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			ErrorHandler.ReportError(this, re);
			ErrorHandler.Recover(this, re);
		}
		finally {
			ExitRule();
		}
		return _localctx;
	}

	public partial class TypeContext : ParserRuleContext {
		[System.Diagnostics.DebuggerNonUserCode] public ITerminalNode INT() { return GetToken(MyLanguageGrammarParser.INT, 0); }
		[System.Diagnostics.DebuggerNonUserCode] public ITerminalNode REAL() { return GetToken(MyLanguageGrammarParser.REAL, 0); }
		[System.Diagnostics.DebuggerNonUserCode] public ITerminalNode STR() { return GetToken(MyLanguageGrammarParser.STR, 0); }
		[System.Diagnostics.DebuggerNonUserCode] public ITerminalNode ARRAY() { return GetToken(MyLanguageGrammarParser.ARRAY, 0); }
		[System.Diagnostics.DebuggerNonUserCode] public ITerminalNode INT_L() { return GetToken(MyLanguageGrammarParser.INT_L, 0); }
		[System.Diagnostics.DebuggerNonUserCode] public ITerminalNode OF() { return GetToken(MyLanguageGrammarParser.OF, 0); }
		[System.Diagnostics.DebuggerNonUserCode] public TypeContext type() {
			return GetRuleContext<TypeContext>(0);
		}
		public TypeContext(ParserRuleContext parent, int invokingState)
			: base(parent, invokingState)
		{
		}
		public override int RuleIndex { get { return RULE_type; } }
		[System.Diagnostics.DebuggerNonUserCode]
		public override TResult Accept<TResult>(IParseTreeVisitor<TResult> visitor) {
			IMyLanguageGrammarVisitor<TResult> typedVisitor = visitor as IMyLanguageGrammarVisitor<TResult>;
			if (typedVisitor != null) return typedVisitor.VisitType(this);
			else return visitor.VisitChildren(this);
		}
	}

	[RuleVersion(0)]
	public TypeContext type() {
		TypeContext _localctx = new TypeContext(Context, State);
		EnterRule(_localctx, 12, RULE_type);
		try {
			State = 120;
			ErrorHandler.Sync(this);
			switch (TokenStream.LA(1)) {
			case INT:
				EnterOuterAlt(_localctx, 1);
				{
				State = 113;
				Match(INT);
				}
				break;
			case REAL:
				EnterOuterAlt(_localctx, 2);
				{
				State = 114;
				Match(REAL);
				}
				break;
			case STR:
				EnterOuterAlt(_localctx, 3);
				{
				State = 115;
				Match(STR);
				}
				break;
			case ARRAY:
				EnterOuterAlt(_localctx, 4);
				{
				State = 116;
				Match(ARRAY);
				State = 117;
				Match(INT_L);
				State = 118;
				Match(OF);
				State = 119;
				type();
				}
				break;
			default:
				throw new NoViableAltException(this);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			ErrorHandler.ReportError(this, re);
			ErrorHandler.Recover(this, re);
		}
		finally {
			ExitRule();
		}
		return _localctx;
	}

	public partial class ProcedureContext : ParserRuleContext {
		[System.Diagnostics.DebuggerNonUserCode] public ProcedureDeclarationContext procedureDeclaration() {
			return GetRuleContext<ProcedureDeclarationContext>(0);
		}
		[System.Diagnostics.DebuggerNonUserCode] public ProcedureBodyContext procedureBody() {
			return GetRuleContext<ProcedureBodyContext>(0);
		}
		[System.Diagnostics.DebuggerNonUserCode] public ITerminalNode SEMI() { return GetToken(MyLanguageGrammarParser.SEMI, 0); }
		[System.Diagnostics.DebuggerNonUserCode] public VariablesDeclarationBlockContext variablesDeclarationBlock() {
			return GetRuleContext<VariablesDeclarationBlockContext>(0);
		}
		public ProcedureContext(ParserRuleContext parent, int invokingState)
			: base(parent, invokingState)
		{
		}
		public override int RuleIndex { get { return RULE_procedure; } }
		[System.Diagnostics.DebuggerNonUserCode]
		public override TResult Accept<TResult>(IParseTreeVisitor<TResult> visitor) {
			IMyLanguageGrammarVisitor<TResult> typedVisitor = visitor as IMyLanguageGrammarVisitor<TResult>;
			if (typedVisitor != null) return typedVisitor.VisitProcedure(this);
			else return visitor.VisitChildren(this);
		}
	}

	[RuleVersion(0)]
	public ProcedureContext procedure() {
		ProcedureContext _localctx = new ProcedureContext(Context, State);
		EnterRule(_localctx, 14, RULE_procedure);
		int _la;
		try {
			EnterOuterAlt(_localctx, 1);
			{
			State = 122;
			procedureDeclaration();
			State = 124;
			ErrorHandler.Sync(this);
			_la = TokenStream.LA(1);
			if (_la==VARIABLES) {
				{
				State = 123;
				variablesDeclarationBlock();
				}
			}

			State = 126;
			procedureBody();
			State = 127;
			Match(SEMI);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			ErrorHandler.ReportError(this, re);
			ErrorHandler.Recover(this, re);
		}
		finally {
			ExitRule();
		}
		return _localctx;
	}

	public partial class ProcedureDeclarationContext : ParserRuleContext {
		[System.Diagnostics.DebuggerNonUserCode] public ITerminalNode PROCEDURE() { return GetToken(MyLanguageGrammarParser.PROCEDURE, 0); }
		[System.Diagnostics.DebuggerNonUserCode] public ITerminalNode IDENT_L() { return GetToken(MyLanguageGrammarParser.IDENT_L, 0); }
		[System.Diagnostics.DebuggerNonUserCode] public ITerminalNode LPAREN() { return GetToken(MyLanguageGrammarParser.LPAREN, 0); }
		[System.Diagnostics.DebuggerNonUserCode] public ProcedureParametersContext procedureParameters() {
			return GetRuleContext<ProcedureParametersContext>(0);
		}
		[System.Diagnostics.DebuggerNonUserCode] public ITerminalNode RPAREN() { return GetToken(MyLanguageGrammarParser.RPAREN, 0); }
		[System.Diagnostics.DebuggerNonUserCode] public ITerminalNode COLON() { return GetToken(MyLanguageGrammarParser.COLON, 0); }
		[System.Diagnostics.DebuggerNonUserCode] public TypeContext type() {
			return GetRuleContext<TypeContext>(0);
		}
		public ProcedureDeclarationContext(ParserRuleContext parent, int invokingState)
			: base(parent, invokingState)
		{
		}
		public override int RuleIndex { get { return RULE_procedureDeclaration; } }
		[System.Diagnostics.DebuggerNonUserCode]
		public override TResult Accept<TResult>(IParseTreeVisitor<TResult> visitor) {
			IMyLanguageGrammarVisitor<TResult> typedVisitor = visitor as IMyLanguageGrammarVisitor<TResult>;
			if (typedVisitor != null) return typedVisitor.VisitProcedureDeclaration(this);
			else return visitor.VisitChildren(this);
		}
	}

	[RuleVersion(0)]
	public ProcedureDeclarationContext procedureDeclaration() {
		ProcedureDeclarationContext _localctx = new ProcedureDeclarationContext(Context, State);
		EnterRule(_localctx, 16, RULE_procedureDeclaration);
		int _la;
		try {
			EnterOuterAlt(_localctx, 1);
			{
			State = 129;
			Match(PROCEDURE);
			State = 130;
			Match(IDENT_L);
			State = 135;
			ErrorHandler.Sync(this);
			_la = TokenStream.LA(1);
			if (_la==LPAREN) {
				{
				State = 131;
				Match(LPAREN);
				State = 132;
				procedureParameters();
				State = 133;
				Match(RPAREN);
				}
			}

			State = 139;
			ErrorHandler.Sync(this);
			_la = TokenStream.LA(1);
			if (_la==COLON) {
				{
				State = 137;
				Match(COLON);
				State = 138;
				type();
				}
			}

			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			ErrorHandler.ReportError(this, re);
			ErrorHandler.Recover(this, re);
		}
		finally {
			ExitRule();
		}
		return _localctx;
	}

	public partial class ProcedureParametersContext : ParserRuleContext {
		[System.Diagnostics.DebuggerNonUserCode] public VariablesDeclarationContext[] variablesDeclaration() {
			return GetRuleContexts<VariablesDeclarationContext>();
		}
		[System.Diagnostics.DebuggerNonUserCode] public VariablesDeclarationContext variablesDeclaration(int i) {
			return GetRuleContext<VariablesDeclarationContext>(i);
		}
		[System.Diagnostics.DebuggerNonUserCode] public ITerminalNode[] COMMA() { return GetTokens(MyLanguageGrammarParser.COMMA); }
		[System.Diagnostics.DebuggerNonUserCode] public ITerminalNode COMMA(int i) {
			return GetToken(MyLanguageGrammarParser.COMMA, i);
		}
		public ProcedureParametersContext(ParserRuleContext parent, int invokingState)
			: base(parent, invokingState)
		{
		}
		public override int RuleIndex { get { return RULE_procedureParameters; } }
		[System.Diagnostics.DebuggerNonUserCode]
		public override TResult Accept<TResult>(IParseTreeVisitor<TResult> visitor) {
			IMyLanguageGrammarVisitor<TResult> typedVisitor = visitor as IMyLanguageGrammarVisitor<TResult>;
			if (typedVisitor != null) return typedVisitor.VisitProcedureParameters(this);
			else return visitor.VisitChildren(this);
		}
	}

	[RuleVersion(0)]
	public ProcedureParametersContext procedureParameters() {
		ProcedureParametersContext _localctx = new ProcedureParametersContext(Context, State);
		EnterRule(_localctx, 18, RULE_procedureParameters);
		int _la;
		try {
			EnterOuterAlt(_localctx, 1);
			{
			State = 141;
			variablesDeclaration();
			State = 146;
			ErrorHandler.Sync(this);
			_la = TokenStream.LA(1);
			while (_la==COMMA) {
				{
				{
				State = 142;
				Match(COMMA);
				State = 143;
				variablesDeclaration();
				}
				}
				State = 148;
				ErrorHandler.Sync(this);
				_la = TokenStream.LA(1);
			}
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			ErrorHandler.ReportError(this, re);
			ErrorHandler.Recover(this, re);
		}
		finally {
			ExitRule();
		}
		return _localctx;
	}

	public partial class ProcedureBodyContext : ParserRuleContext {
		[System.Diagnostics.DebuggerNonUserCode] public ITerminalNode START() { return GetToken(MyLanguageGrammarParser.START, 0); }
		[System.Diagnostics.DebuggerNonUserCode] public ITerminalNode END() { return GetToken(MyLanguageGrammarParser.END, 0); }
		[System.Diagnostics.DebuggerNonUserCode] public StatementContext[] statement() {
			return GetRuleContexts<StatementContext>();
		}
		[System.Diagnostics.DebuggerNonUserCode] public StatementContext statement(int i) {
			return GetRuleContext<StatementContext>(i);
		}
		public ProcedureBodyContext(ParserRuleContext parent, int invokingState)
			: base(parent, invokingState)
		{
		}
		public override int RuleIndex { get { return RULE_procedureBody; } }
		[System.Diagnostics.DebuggerNonUserCode]
		public override TResult Accept<TResult>(IParseTreeVisitor<TResult> visitor) {
			IMyLanguageGrammarVisitor<TResult> typedVisitor = visitor as IMyLanguageGrammarVisitor<TResult>;
			if (typedVisitor != null) return typedVisitor.VisitProcedureBody(this);
			else return visitor.VisitChildren(this);
		}
	}
